pgorm-query/pgorm-query-derive/tests/compile-fail/path_iden.rs
use pgorm_query::Iden;

#[derive(Iden)]
enum Asset {
    Table,
    Id,
    AssetName,
    #[iden]
    Creation,
}

fn main() {}
